Make chessboard size configurable
Added one more basic acceptance test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,4 +5,10 @@ add_test(
   NAME basic_acceptance_1
   CONFIGURATIONS Release Debug
   WORKING_DIRECTORY ${TESTS_WD}
-  COMMAND stitch ${INPUTS_DIR}/1.jpg ${INPUTS_DIR}/2.jpg)
+  COMMAND stitch ${INPUTS_DIR}/1a.jpg ${INPUTS_DIR}/1b.jpg -b=3x4)
+
+add_test(
+  NAME basic_acceptance_2
+  CONFIGURATIONS Release Debug
+  WORKING_DIRECTORY ${TESTS_WD}
+  COMMAND stitch ${INPUTS_DIR}/3a.jpg ${INPUTS_DIR}/3b.jpg ${INPUTS_DIR}/3c.jpg -b=5x3)
