--- a/.travis.yml
+++ b/.travis.yml
@@ -29,4 +29,4 @@ compiler:
 script:
   - mkdir build && cd build
   - cmake -DCMAKE_BUILD_TYPE=${BUILD_TYPE} -DCMAKE_INSTALL_PREFIX=../install ..
-  - make install
+  - make VERBOSE=1 install
